# SearchEngine

./: CMakeLists.txt  README.md
IndexProgram/: indexing.hpp
SearchingProgram/: searching.hpp
